--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -150,9 +150,15 @@
                                             <td>{{assessment.PlanName}}</td>
                                             <td>{{assessment.StartDate}} </td>
                                             <td>{{assessment.EndDate}} </td>
-                                            <td><span class="label label-success">{{assessment.StatusDescription}}</span></td>
-                                            <td><span class="label label-success">{{assessment.IsHRDCreated}}</span></td>
-
+                                            <td>
+                                                <span ng-class="{
+                                                      'label label-success': assessment.StatusDescription == 'Approved',
+                                                      'label label-danger': assessment.StatusDescription == 'Rejected'}">{{assessment.StatusDescription}}</span>
+                                            </td>
+                                            <td>
+                                                <span ng-class="{
+                                                      'label label-success': assessment.IsHRDCreated == 'Yes'}">{{assessment.IsHRDCreated}}</span>
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
