--- a/Web/Areas/Hub/Views/Shared/DisplayHub.cshtml
+++ b/Web/Areas/Hub/Views/Shared/DisplayHub.cshtml
@@ -15,17 +15,9 @@
         }
     }
 </div>
-<div class="row-fluid form-inline">
-    <h4 class="page-header">@Html.Translate(title) 
+@Html.Translate(title) 
     @Html.Label("Owner", mdl.Owner) - @Html.Label("WH", mdl.Name) @Html.Translate(" Hub ")
     
-    @*@{
-        if(usr.UserAllowedHubs.Count > 1)
-        {
-            @Html.HubSelectionLink(Html.Translate("Change Warehouse"), Url.Action("HubList", "CurrentHub"), Html.Translate("Change Hub"))
-        }
-        
-   }*@ </h4>
-</div>
+
 
 
