CATS-1383 : Added Edit Workflow Impl

--- a/Web/Areas/EarlyWarning/Views/ReliefRequisition/Allocation.cshtml
+++ b/Web/Areas/EarlyWarning/Views/ReliefRequisition/Allocation.cshtml
@@ -76,6 +76,8 @@
                     <ul class="dropdown-menu pull-right">
                         @foreach (FlowTemplateViewModel actions in Model.InitialStateFlowTemplates)
                         {
+                            if (actions.Name == "Edit") { continue; }
+
                             if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Approve_Requisition)
                             || UserAccountHelper.PsnpOperationCheck(PsnpConstants.Operation.Approve_Monthly_relife_requisitions))
                             {
