--- a/Web/Areas/Logistics/Views/Transfer/Index.cshtml
+++ b/Web/Areas/Logistics/Views/Transfer/Index.cshtml
@@ -146,7 +146,7 @@
                                         @item.Status
                                     </td>
                                     <td>
-                                        @if (item.Status == "Draft" || item.Status == "Rejected")
+                                        @if (item.Status == "Draft" || item.Status == "Rejected" || item.Status == "Edited")
                                         {
                                             <a id="btnDelete" onclick="OnDelete(@item.TransferID)">@Html.Translate("Delete")</a>
                                         }
@@ -174,12 +174,12 @@
                                                     </li>
                                                 }
 
-                                                @if (item.Status == "Rejected")
+                                                @*@if (item.Status == "Rejected")
                                                 {
                                                     <li class="edit_button">
                                                         <a href="javascript:promot_workflow(@item.BusinessProcessID ,@item.ApprovedId,'Approve',@item.TransferID)" title="Approve">Approve</a>
                                                     </li>
-                                                }
+                                                }*@
 
                                                 <li class="divider"></li>
 
