Minor fix on Regional Dashboard

--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     const string PAGE_NAME = "EarlyWarning.Index";
     Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
     ViewBag.PageTitle = Html.Translate("Regional Dashboard");
-    ViewBag.PageTitleDescription = "[ <b>"  + ViewBag.RegionName + "</b> ]";
+    ViewBag.PageTitleDescription = "[ "  + ViewBag.RegionName + " ]";
 }
 
 
