--- a/Web/Areas/Procurement/Views/TransportBidPlan/Edit.cshtml
+++ b/Web/Areas/Procurement/Views/TransportBidPlan/Edit.cshtml
@@ -72,7 +72,7 @@
 
 
         @Html.HiddenFor(model => model.TransportBidPlanID)
-
+        @Html.HiddenFor(model => model.BusinessProcessID)
         <div class="form-group">
             <label class="col-md-3 control-label" for="Name"> @Html.LabelFor(model => model.Year, Html.Translate("Year"))</label>
             <div class="col-md-2">
