--- a/Web/Areas/Procurement/Views/TransportBidPlan/Index.cshtml
+++ b/Web/Areas/Procurement/Views/TransportBidPlan/Index.cshtml
@@ -75,9 +75,7 @@
                         <td>
                             @item.YearHalf
                         </td>
-                        <td>
-                            @state.Name
-                        </td>
+                       
                         
                         <td>
                             @if (LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Edit_Bid_Plan).ToString() == "Edit_Bid_Plan"
@@ -110,7 +108,7 @@
                                     <i class="fa fa-ellipsis-horizontal"></i> @Html.Translate("Workflow") <i class="fa fa-angle-down"></i>
                                 </button>
                                 <ul class="dropdown-menu pull-right">
-                                    @foreach (FlowTemplate actions in state.InitialStateFlowTemplates)
+                                    @*@foreach (FlowTemplate actions in state.InitialStateFlowTemplates)
                                     {
 
                                         if ((LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Warehouse_selection).ToString() == "Warehouse_selection") && actions.Name == "Approve")
@@ -118,7 +116,7 @@
                                             <li class="edit_button"><a href="javascript:promot_workflow(@item.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@item.TransportBidPlanID)" title="@actions.Name">@actions.Name</a></li>
                                         }
                                         
-                                    }
+                                    }*@
                                     <li class="divider"></li>
                                     @*@if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.View_Need_Assessment_Detail))
                                         {*@
