--- a/Web/Areas/Procurement/Views/TransportBidPlan/Edit.cshtml
+++ b/Web/Areas/Procurement/Views/TransportBidPlan/Edit.cshtml
@@ -10,13 +10,13 @@
 
 }
 @*@section LeftBar
-{
-    @Html.Partial("_BidPlanLeftBar")
-}*@
+    {
+        @Html.Partial("_BidPlanLeftBar")
+    }*@
 @section Toolbar
 {
-    <div id="" class="pull-right tooltips" data-placement="top" >
-        <a class="btn default  grey-salt toolbar-btn" data-buttontype="" href="@Url.Action("index", "TransportBidPlan")" >
+    <div id="" class="pull-right tooltips" data-placement="top">
+        <a class="btn default  grey-salt toolbar-btn" data-buttontype="" href="@Url.Action("index", "TransportBidPlan")">
             <i class="fa fa-list"></i> @Html.Translate("Back to List")
         </a>
     </div>
@@ -36,7 +36,7 @@
             <a class="btn  btn-circle btn-default blue-stripe toolbar-btn" data-buttontype="btn_save" data-submittedform="frm_edit_bid" title="@Html.Translate("save")">
                 <i class="fa fa-save"></i> @Html.Translate("Save")
             </a>
-            
+
             <a class="btn btn-circle btn-default green-stripe toolbar-btn" href="@Url.Action("Create", "TransportBidPlan")">
                 <i class="fa fa-plus-circle "></i> @Html.Translate("New Bid Plan")
             </a>
@@ -68,28 +68,28 @@
     <div class="portlet-body">
         @using (Html.BeginForm("Edit", "TransportBidPlan", FormMethod.Post, new { @class = "form-horizontal", id = "frm_edit_bid" }))
             {
-        @Html.ValidationSummary(true)
+            @Html.ValidationSummary(true)
 
 
-        @Html.HiddenFor(model => model.TransportBidPlanID)
-
-        <div class="form-group">
-            <label class="col-md-3 control-label" for="Name"> @Html.LabelFor(model => model.Year, Html.Translate("Year"))</label>
-            <div class="col-md-2">
-                @Html.TextBoxFor(model => model.Year, new { @class = "form-control", @placeholder = "Year" })
-                @Html.ValidationMessageFor(model => model.Year)
+            @Html.HiddenFor(model => model.TransportBidPlanID)
+            @Html.HiddenFor(model => model.BusinessProcessID)
+            <div class="form-group">
+                <label class="col-md-3 control-label" for="Name"> @Html.LabelFor(model => model.Year, Html.Translate("Year"))</label>
+                <div class="col-md-2">
+                    @Html.TextBoxFor(model => model.Year, new { @class = "form-control", @placeholder = "Year" })
+                    @Html.ValidationMessageFor(model => model.Year)
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <label class="col-md-3 control-label" for="YearHalf"> @Html.LabelFor(model => model.YearHalf, Html.Translate("Year Half"))</label>
-            <div class="col-md-2">
-                @Html.TextBoxFor(model => model.YearHalf, new { @class = "form-control", @placeholder = "Year Half" })
-                @Html.ValidationMessageFor(model => model.YearHalf)
+            <div class="form-group">
+                <label class="col-md-3 control-label" for="YearHalf"> @Html.LabelFor(model => model.YearHalf, Html.Translate("Year Half"))</label>
+                <div class="col-md-2">
+                    @Html.TextBoxFor(model => model.YearHalf, new { @class = "form-control", @placeholder = "Year Half" })
+                    @Html.ValidationMessageFor(model => model.YearHalf)
+                </div>
             </div>
-        </div>
 
-            }
+        }
     </div>
 </div>
 
