--- a/Web/Areas/Logistics/Views/ReciptPlanForLoan/Edit.cshtml
+++ b/Web/Areas/Logistics/Views/ReciptPlanForLoan/Edit.cshtml
@@ -22,6 +22,7 @@
             @Html.HiddenFor(m => m.ShippingInstructionID)
             @Html.HiddenFor(m => m.CommoditySourceID)
             @Html.HiddenFor(m => m.CreatedDate)
+            @Html.HiddenFor(m => m.BusinessProcessID)
             <div class="modal-body">
             <div class="form-horizontal">
                 <div class="row">
