--- a/Web/Areas/EarlyWarning/Views/NeedAssessment/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/NeedAssessment/Index.cshtml
@@ -7,159 +7,106 @@
 @using LanguageHelpers.Localization
 @using Cats.Models.Constant
 @model ICollection<Cats.Models.Plan>
-@{
-    ViewBag.Title = "NeedAssessmentPlan";
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
-    int index = 0;
-}
-
-@section Title
-{
-Plans
-}
-
-@section PageTitle
-{
-    <h1 class="hdr-blck big ">1
-        @Html.Translate("Draft Need Assessment")
-    </h1>
-}
-
+    @{
+        ViewBag.Title = "NeedAssessmentPlan";
+        int index = 0;
+        const string PAGE_NAME = "EarlyWarning.Index";
+        Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+        ViewBag.PageTitle = Html.Translate("Draft Need Assessment");
+        ViewBag.PageTitleDescription = "";
+        //ViewBag._id = "draft";
+    }
 <div class="row">
-    @Html.Partial("_NeedAssessmentMainLeftBar")
+        @Html.Partial("_NeedAssessmentMainLeftBar", new System.Web.Mvc.ViewDataDictionary { { "_id", @ViewBag.AssessmentStatus } })
 
-    <div class="col-md-10  col-sm-9">
-        <div class=" box box-primary ">
-            <div class="box-body row">
-                <div class="text-right col-md-12">
+    <div class="col-md-9  col-sm-9">
+        <div class="portlet light bordered">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> @Html.Translate("Need Assessments")</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
                     @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Create_new_needs_assessment))
                     {
-                        <a href="@Url.Action("CreateNeedAssessment", "NeedAssessment", new {Area = "EarlyWarning"})" class="btn" btn-success=""
-                           data-buttontype="btn_new_record"><button type="button" class="btn btn-success"><span class="fa fa-plus"></span> New Need Assessment Plan</button></a>
+                        <a href="@Url.Action("CreateNeedAssessment", "NeedAssessment", new {Area = "EarlyWarning"})" class="btn green" btn-success=""
+                            data-buttontype="btn_new_record"><i class="fa fa-plus"></i> @Html.Translate("New Need Assessment Plan")</a>
                     }
-                </div>
-                <div class="col-md-12">
-                    <div class="table-responsive">
-                        <table class="table table-striped table-condensed">
-                            <thead>
-                                <tr>
-                                    <th>Assessment Name</th>
-                                    <th>Start Date</th>
-                                    <th>End Date</th>
-                                    <th>Status</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (Plan item in Model)
-                                {
-                                    index++;
-                                    var state = item.BusinessProcess.CurrentState.BaseStateTemplate;
-                                    //if (state.Name == "Approved by finance" || state.Name == "Cheque Issued" || state.Name == "Cheque Cashed")
-                                    //{
-                                    <tr>
-                                        <td>
-                                            @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.View_Need_Assessment_Detail)
-                                                 || UserAccountHelper.RegionalOperationCheck(RegionalConstants.Operation.View_Need_Assessment_Detail))
-                                            {
-                                                <a href='@Url.Action("Detail", "NeedAssessment", new {id = item.PlanID})'> @item.PlanName </a>
-                                            }
-                                            else
-                                            {
-                                                @item.PlanName
-                                            }
-                                        </td>
-                                        <td>
-                                            @item.StartDate
-                                        </td>
-                                        <td>
-                                            @item.EndDate
-                                        </td>
-                                        <td>
-                                            @state.Name
-                                        </td>
-                                        <td>
-                                            <div class="btn-group">
-                                                <button type="button" id="action_@index" class="btn btn-default dropdown-toggle btn-xs green-stripe" data-toggle="dropdown">
-                                                    <i class="fa fa-ellipsis-horizontal"></i> @Html.Translate("Workflow") <i class="fa fa-angle-down"></i>
-                                                </button>
-                                                <ul class="dropdown-menu pull-right">
-                                                    @foreach (FlowTemplate actions in state.InitialStateFlowTemplates)
-                                                    {
-                                                        if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Approve_Need_Assessment) && actions.Name == "Approve" && @item.NeedAssessmentCreated)
-                                                        {
-                                                            <li class="edit_button"><a href="javascript:promot_workflow(@item.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@item.PlanID)" title="@actions.Name">@actions.Name</a></li>
-                                                        }
-                                                    }
-                                                    <li class="divider"></li>
-                                                    @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.View_Need_Assessment_Detail))
-                                                    {
-                                                        <li class="edit_button"><a href="javascript:workflow_history(@item.BusinessProcessID)"> History </a></li>
-                                                    }
-                                                </ul>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                                        //}
-
-                                }
-                            </tbody>
-                        </table>
-                            @*@(Html.Kendo().Grid<Cats.Areas.EarlyWarning.Models.NeedAssessmentPlanViewModel>()
-                              .Name("grid")
-                              .Columns(columns =>
-                              {
-                                  columns.Bound(p => p.AssessmentName).Title(Html.Translate("Assessment Name")).ClientTemplate(
-                                      "# if ('" + UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.View_Need_Assessment_Detail) + "' == 'True'" +
-                                      " || '" + UserAccountHelper.RegionalOperationCheck(RegionalConstants.Operation.View_Need_Assessment_Detail) + "' == 'True') { #" +
-                                      "<a href='" + Url.Action("Detail", "NeedAssessment", new { id = "#=PlanID#" }) + " '> " + "#=AssessmentName#" + "</a>  " +
-                                      "# } #"
-                                      );
-                                  columns.Bound(p => p.StartDate).Title(Html.Translate("Start Date"));
-                                  columns.Bound(p => p.EndDate).Title(Html.Translate("End Date"));
-                                  columns.Bound(p => p.Status).Title(Html.Translate("Status"));
-                                  columns.Command(p =>
-                                  {
-                                      if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Approve_Need_Assessment)
-                                          || UserAccountHelper.RegionalOperationCheck(RegionalConstants.Operation.Approve__need_assesment))
-                                      {
-                                          p.Custom("Approve").Click("approveNeedAssessment").Text("<span class=\"fa fa-check\"></span> Approve ");
-                                      }
-                                  });
-                                  //p => p.Custom("Approve")
-                                  //         .Click("approveNeedAssessment")
-                                  //         .Text(
-
-                                  //              @Html.EarlyWarningOperationJsLink(
-                                  //                    EarlyWarningConstants.Operation.View_Need_Assessment_Detail, "Approve", "approveNeedAssessment").ToString()
-
-                                  //          )
-
-                                  //columns.Template(
-                                  //          @<text>
-                                  //          @Html.EarlyWarningOperationJsLink(
-                                  //              EarlyWarningConstants.Operation.View_Need_Assessment_Detail, "Approve", "approveNeedAssessment").ToString()
-                                  //          </text>
-                                  //      ).Width("200px");
-                              })
-                              .HtmlAttributes(new { style = "height: 430px" })
-                              .Pageable()
-                              .Sortable()
-                              .Scrollable()
-                              .Events(e => e.DataBound("onDataBound"))
-                              .DataSource(dataSource => dataSource
-                                  .Ajax()
-                                  .PageSize(30)
-                                  .ServerOperation(false)
-                                  .Model(model => model.Id(p => p.PlanID))
-                                  .Read(read => read.Action("NeedAssessment_Plan", "NeedAssessment", new { id = ViewBag.AssessmentStatus }))
-                              )
-                            )*@
-</div>
+                    @*<a class="btn btn-icon-only btn-default fullscreen"></a>*@
                 </div>
             </div>
+            <div class="portlet-body">
+                <div class="table-responsive" style="overflow:visible !important;">
+                    <table class="table table-striped table-condensed ">
+                        <thead>
+                            <tr>
+                                <th>Assessment Name</th>
+                                <th>Start Date</th>
+                                <th>End Date</th>
+                                <th>Status</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (Plan item in Model)
+                                                {
+                                                    index++;
+                                                    var state = item.BusinessProcess.CurrentState.BaseStateTemplate;
+                                                    //if (state.Name == "Approved by finance" || state.Name == "Cheque Issued" || state.Name == "Cheque Cashed")
+                                                    //{
+                                            <tr>
+                                                <td>
+                                                    @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.View_Need_Assessment_Detail) || UserAccountHelper.RegionalOperationCheck(RegionalConstants.Operation.View_Need_Assessment_Detail))
+                                                            {
+                                                        <a href='@Url.Action("Detail", "NeedAssessment", new {id = item.PlanID})'> @item.PlanName </a>
+                                                            }
+                                                            else
+                                                            {
+                                                        @item.PlanName
+                                                            }
+                                                </td>
+                                                <td>
+                                                    @item.StartDate
+                                                </td>
+                                                <td>
+                                                    @item.EndDate
+                                                </td>
+                                                <td>
+                                                    @state.Name
+                                                </td>
+                                                <td>
+                                                    <div class="btn-group">
+                                                        <button type="button" id="action_@index" class="btn btn-default dropdown-toggle btn-xs green-stripe" data-toggle="dropdown">
+                                                            <i class="fa fa-ellipsis-horizontal"></i> @Html.Translate("Workflow") <i class="fa fa-angle-down"></i>
+                                                        </button>
+                                                        <ul class="dropdown-menu pull-right">
+                                                            @foreach (FlowTemplate actions in state.InitialStateFlowTemplates)
+                                                                    {
+                                                                        if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Approve_Need_Assessment) && actions.Name == "Approve" && @item.NeedAssessmentCreated)
+                                                                        {
+                                                                <li class="edit_button"><a href="javascript:promot_workflow(@item.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@item.PlanID)" title="@actions.Name">@actions.Name</a></li>
+                                                                        }
+                                                                    }
+                                                            <li class="divider"></li>
+                                                            @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.View_Need_Assessment_Detail))
+                                                                    {
+                                                                <li class="edit_button"><a href="javascript:workflow_history(@item.BusinessProcessID)"> History </a></li>
+                                                                    }
+                                                        </ul>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                                    //}
 
+                                                }
+                        </tbody>
+                    </table>
+                </div>
 
+            </div>
         </div>
     </div>
 </div>
@@ -183,7 +130,7 @@ Plans
             </div>
             <div class="modal-footer">
                 <button id="yes" class="btn btn-primary" type="submit">@Html.Translate("Yes") </button>
-                <button id="no"class="btn" data-dismiss="modal" aria-hidden="true">@Html.Translate("No") </button>
+                <button id="no" class="btn" data-dismiss="modal" aria-hidden="true">@Html.Translate("No") </button>
             </div>
 
 
@@ -203,42 +150,43 @@ Plans
         </div>
     </div>
 </div>
+
 @Html.Partial("~/Views/Shared/_PromotWorkflow.cshtml")
 
 <script>
-    var history_link = "@Url.Action("History", "BusinessProcess", new { Area = "WorkflowManager", id = "0" })";
+var history_link = "@Url.Action("History", "BusinessProcess", new { Area = "WorkflowManager", id = "0" })";
 
-    function promot_workflow(BusinessProcessID, nextstate, actionname, PlanID) {
-        //alert(PaymentRequestID);
-        $('#ParentBusinessProcessID').val(BusinessProcessID);
-        $('#stateID').val(nextstate);
-        $('#modalPromotionLabel').html(actionname);
-        $('#TransporterChequeID').val(TransporterChequeID);
-        $('#modalPromotion').modal();
-        $.ajax({
-            type: "POST",
-            url: "@Url.Action("ApproveNeedAssessment", "NeedAssessment")",
-            data: "{id:" + PlanID + "}",
-            dataType: json
-        });
-    }
-    function workflow_history(BusinessProcessID) {
-        $('#modalHistory').modal();
-        $('#modalHistoryBody').html("<div style='text-align:center;'> <img src='/content/images/loading.gif'/></div>");
-        $.post(history_link + BusinessProcessID, {},
-            function (data) {
-                $("#modalHistoryBody").html(data);
-            }
-        );
-    }
+function promot_workflow(BusinessProcessID, nextstate, actionname, PlanID) {
+    //alert(PaymentRequestID);
+    $('#ParentBusinessProcessID').val(BusinessProcessID);
+    $('#stateID').val(nextstate);
+    $('#modalPromotionLabel').html(actionname);
+    $('#TransporterChequeID').val(TransporterChequeID);
+    $('#modalPromotion').modal();
+    $.ajax({
+        type: "POST",
+        url: "@Url.Action("ApproveNeedAssessment", "NeedAssessment")",
+        data: "{id:" + PlanID + "}",
+        dataType: json
+    });
+}
+function workflow_history(BusinessProcessID) {
+    $('#modalHistory').modal();
+    $('#modalHistoryBody').html("<div style='text-align:center;'> <img src='/content/images/loading.gif'/></div>");
+    $.post(history_link + BusinessProcessID, {},
+        function (data) {
+            $("#modalHistoryBody").html(data);
+        }
+    );
+}
 
-    function onDataBound(e) {
-       
-        $(".table-responsive .k-button").removeClass("k-button").addClass("btn btn-xs mrgn3-b col-md-11");
-        $(".k-grid-Edit").addClass("btn-warning");
-        $(".k-grid-Approve").addClass("btn-success");
-        $(".k-grid-Summary").addClass("btn-primary");
-    }
+function onDataBound(e) {
+
+    $(".table-responsive .k-button").removeClass("k-button").addClass("btn btn-xs mrgn3-b col-md-11");
+    $(".k-grid-Edit").addClass("btn-warning");
+    $(".k-grid-Approve").addClass("btn-success");
+    $(".k-grid-Summary").addClass("btn-primary");
+}
 
 </script>
 
@@ -253,8 +201,8 @@ Plans
         console.log("@Url.Action("ApproveNeedAssessment", "NeedAssessment")" + "/" + dataItem.PlanID);
         $("#yes").click(function () {
             window.location = "@Url.Action("ApproveNeedAssessment", "NeedAssessment")" + "/" + dataItem.PlanID;
-          
+
         });
 
     }
-</script>
+    </script>
