--- a/Web/Areas/Logistics/Views/LocalPurchase/Details.cshtml
+++ b/Web/Areas/Logistics/Views/LocalPurchase/Details.cshtml
@@ -2,6 +2,7 @@
 @using Kendo.Mvc.UI
 @using Cats.Helpers
 @using Cats.Models
+@using Cats.Models.Constant
 @using Cats.Security
 
 @model Cats.Areas.Logistics.Models.LocalPurchaseWithDetailViewModel
@@ -77,7 +78,8 @@
                             @foreach (FlowTemplate actions in state.InitialStateFlowTemplates)
                             {
                                 //Console.WriteLine(state.Name);
-                                if (LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_local_purchase) == "Approve_local_purchase" && actions.Name == "Approve")
+                                if (LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_local_purchase) == "Approve_local_purchase" && actions.Name == "Approve" ||
+                                    Model.BusinessProcess.CurrentState.BaseStateTemplate.Name == ConventionalAction.Edited)
                                 {
                                     <li class="edit_button">
                                         <a href="javascript:promot_workflow(@Model.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@Model.LocalPurchaseID)" title="@actions.Name">@actions.Name</a>
@@ -87,6 +89,7 @@
                             <li class="divider"></li>
                             <li class="edit_button"><a href="javascript:workflow_history(@Model.BusinessProcessID)"> History </a></li>
                         </ul>
+
                     </div>
                     <a class="btn green btn-xs toolbar-btn " data-buttontype="btn_save" data-submittedform="frm_create_localPurchase"><i class="fa fa-save"></i> @Html.Translate("Save Changes")</a>
                     <a class="btn red btn-xs toolbar-btn " data-buttontype="btn_cancel" href=""><i class="fa fa-times"></i> @Html.Translate("Cancel Changes")</a>
